Import of MNDRIX/Class-DBI-MSAccess-0.1.1 from CPAN.
gitpan-cpan-distribution: Class-DBI-MSAccess
gitpan-cpan-version:      0.1.1
gitpan-cpan-path:         MNDRIX/Class-DBI-MSAccess-0.1.1.tar.gz
gitpan-cpan-author:       MNDRIX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 ---
 name: Class-DBI-MSAccess
-version: 0.01
+version: 0.1.1
 author:
-  - ''
+  - Michael Hendricks  <michael@palmcluster.org>
 abstract: Extensions to Class::DBI for MS Access
 license: perl
 requires:
@@ -12,5 +12,5 @@ build_requires:
 provides:
   Class::DBI::MSAccess:
     file: lib/Class/DBI/MSAccess.pm
-    version: 0.01
+    version: 0.1.1
 generated_by: Module::Build version 0.2611
